# TokenGauge

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
assets/providers/: NOTICE
crates/tokengauge-core/: Cargo.toml  config.example.toml
crates/tokengauge-core/src/: claude.rs  codex.rs  glm.rs  grok.rs  kimi.rs  lib.rs  pace.rs  update.rs
crates/tokengauge-popover/: Cargo.toml
crates/tokengauge-popover/src/: main.rs  style.css
crates/tokengauge-tray/: Cargo.toml
crates/tokengauge-tray/src/: main.rs
crates/tokengauge-tui/: Cargo.toml
crates/tokengauge-tui/src/: app.rs  main.rs  refresh.rs  theme.rs  ui.rs
crates/tokengauge-waybar/: Cargo.toml
crates/tokengauge-waybar/src/: main.rs
plasma/org.tokengauge.plasmoid/: metadata.json
plasma/org.tokengauge.plasmoid/contents/config/: main.xml
plasma/org.tokengauge.plasmoid/contents/ui/: CompactRep.qml  ConfigGeneral.qml  FullRep.qml  main.qml
scripts/: install-plasma.sh  install.ps1  install.sh  tokengauge-daemon.service  update.sh  waybar-snippet.jsonc
scripts/eww-popup/: README.md  eww.scss  eww.yuck
