[workspace]
resolver = "2"
members = [
  "crates/tokengauge-core",
  "crates/tokengauge-waybar",
  "crates/tokengauge-tui",
  "crates/tokengauge-popover",
  "crates/tokengauge-tray"
]
# The waybar and popover crates are Linux-only (Waybar / gtk4-layer-shell) and do
# not build on Windows or macOS. `default-members` limits a bare `cargo build`
# (and `cargo test`) to the cross-platform crates so the workspace builds on any
# OS. On Linux you can still build everything with `cargo build --workspace`.
default-members = [
  "crates/tokengauge-core",
  "crates/tokengauge-tui"
]

[workspace.package]
# File::try_lock / std::fs::TryLockError (codex refresh lock) stabilized in 1.89.
rust-version = "1.89"

[workspace.dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
