[package]
name = "tokengauge-popover"
version = "0.5.0"
edition = "2024"

[dependencies]
tokengauge-core = { path = "../tokengauge-core" }
anyhow = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
gtk4 = { version = "0.9", package = "gtk4" }
gtk4-layer-shell = "0.5"
libc = "0.2"
