[package]
name = "tokengauge-tui"
version = "0.10.1"
edition = "2024"
rust-version.workspace = true

[dependencies]
tokengauge-core = { path = "../tokengauge-core", features = ["self-update"] }
anyhow = { workspace = true }
clap = { workspace = true }
ratatui = { version = "0.29", features = ["crossterm"] }
serde = { workspace = true }
serde_json = { workspace = true }
crossterm = "0.28"
chrono = { workspace = true }
