[package]
name = "tokengauge-waybar"
version = "0.8.0"
edition = "2024"

[dependencies]
tokengauge-core = { path = "../tokengauge-core" }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
signal-hook = "0.3"
chrono = { workspace = true }
libc = "0.2"
