[package]
name = "tokengauge-waybar"
version = "0.10.1"
edition = "2024"

[dependencies]
tokengauge-core = { path = "../tokengauge-core", features = ["self-update"] }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
signal-hook = "0.3"
chrono = { workspace = true }
libc = "0.2"
